# Website-Status-Checker

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_GUI_SUMMARY.md  DISASTER_RECOVERY.md  DOCKER_README.md  DOCUMENTATION_INDEX.md  Dockerfile  FAQ.md  FINAL_VERIFICATION.md  GUI_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_READY.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_DESKTOP_GUI.md  RUNBOOK.md  START_HERE.md  TEST_REPORT.md  alembic.ini  docker-compose.yml  end_to_end_test.py  real_world_results.csv  real_world_results.json  real_world_test.csv  requirements-dev.txt  requirements-gui.txt  run_desktop_gui.py  start_gui.bat  start_gui.py  test_core.py  test_desktop_gui.py  test_results.csv  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  tests.yml
Website-Status-Checker/: CHANGELOG.md  LICENSE  README.md  SETUP_INFO_NEEDED.md  pyproject.toml  requirements.txt  setup.py
Website-Status-Checker/examples/: api_usage_examples.py  batch_processing_example.py  sample_websites.csv
Website-Status-Checker/src/: __init__.py
Website-Status-Checker/tests/: test_basic.py
alembic/: env.py
alembic/versions/: 072f38af4d19_initial_tables_jobs_urlcheckresult_.py  086578adddef_add_apikey_model_for_authentication.py
desktop_gui/: __init__.py  app.py  main_window.py
desktop_gui/controllers/: __init__.py  export_controller.py  file_controller.py  process_controller.py
desktop_gui/models/: __init__.py  app_state.py  config.py
desktop_gui/resources/: __init__.py  styles.py
desktop_gui/utils/: async_bridge.py  formatters.py  validators.py
desktop_gui/widgets/: __init__.py  control_panel.py  progress_tab.py  results_table.py  stats_tab.py
docs/: API.md  DEPLOYMENT.md  ERROR_TRACKING.md  IMPLEMENTATION_STATUS.md  LOGGING.md  METRICS.md
examples/: api_usage_examples.py  batch_processing_example.py
gui/: __init__.py  config.py  main.py
gui/api/: __init__.py  admin.py  health.py  metrics.py  process.py  results.py  sse.py  stats.py  upload.py
gui/auth/: __init__.py  api_keys.py  dependencies.py
gui/database/: __init__.py  models.py  session.py
gui/middleware/: __init__.py  error_tracking.py  logging.py  metrics.py  rate_limiter.py
gui/models/: __init__.py  schemas.py
gui/services/: __init__.py  file_handler.py  job_manager.py  processor.py
gui/static/css/: styles.css
gui/static/js/: app.js  charts.js  progress.js  results.js  uploader.js
gui/templates/: base.html  index.html
k8s/: README.md  app-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml
monitoring/: README.md  prometheus.yml
monitoring/alerts/: website-checker-alerts.yml
monitoring/grafana-dashboards/: dashboard-provisioning.yml  website-checker-dashboard.json
scripts/: README.md  backup.bat  backup.sh  cleanup.sh  create_api_key.py  health_check.bat  health_check.sh  load_test.py  migrate_structure.bat  restore.sh
src/: __init__.py  batch_processor.py  cli.py  config.py  website_status_checker.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  batch.py  checker.py
src/utils/: __init__.py  error_tracking.py  logging_config.py  secrets.py
tests/: __init__.py  conftest.py
tests/integration/: test_batch_processing.py
tests/security/: test_file_upload_security.py  test_ssl_verification.py  test_ssrf_protection.py
tests/unit/: test_batch.py  test_checker.py  test_config.py
